[package]
name = "macro-gpt"
version = "0.1.1"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
description = "A simple proc macro that uses ChatGPT to generate rust code at compile-time based on a prompt"
keywords = ["gpt", "chatgpt", "ai", "macro", "generate"]
repository = "https://github.com/sam0x17/macro-gpt"

[lib]
proc-macro = true

[dependencies]
chatgpt-functions = "0.3.6"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = "1"
quote = "1"
futures = "0.3"
tokio = { version = "1.29", features = ["full"] }
walkdir = "2.3"
regex = "1.9"
